# stock_evaluator

./: .gitignore  Dockerfile_backend  LICENSE  README.md  app.py  pyproject.toml  requirements.txt
.streamlit/: config.toml
backend/: __init__.py  black_scholes_merton.py  main.py  monte_carlo.py  sentiment_analysis.py
backend/models/: __init__.py  dictionary.pkl  maxent_sentiment_classifier.pkl  name2ticker_dict.pkl  sentiment_model.py
backend/utils/: __init__.py  data_fetching.py
notebooks/: finnhub_tickers.py  selenium_docker_experiment.py
notebooks/black_scholes_merton/: BS_model.ipynb  BS_model_v2.ipynb
notebooks/monte_carlo/: monte_carlo_experiment.ipynb
notebooks/sentiment_analysis/: Yahoo_Finance_Sentiment_Analysis.ipynb  data_fetching.py
streamlit/: black_scholes_merton_app.py  config.toml  monte_carlo_app.py  sentiment_analysis_app.py
