[tool.poetry]
name = "stock-evaluator"
version = "0.1.0"
description = "Web Application for Stock Evaluation using Monte Carlo Simulations, Black-Scholes-Merton Model for Stock Options, and Sentiment Analysis."
authors = ["xavsant <xavierboons2021@economics.smu.edu.sg>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.11"
pandas = "^2.2.3"
numpy = "^2.1.3"
streamlit = "^1.39.0"
fastapi = {extras = ["standard"], version = "^0.115.4"}
yfinance = "^0.2.48"
python-dotenv = "^1.0.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
